@@ -1,3 +1,6 @@
+2009-06-15 - Sean Huber (shuber@huberry.com)
+  * Tree accepts an array of order options
+
 2009-06-14 - Sean Huber (shuber@huberry.com)
   * Update Nestable interface logic
   * Update README
